webapp/static/scss/seatingplan.scss
@import "partials/layout";
@import "partials/m_layout";
@import "partials/variables";
@import "partials/form_element";

div.seating-planner {
	display: grid;
	grid-template-columns: 1fr 20rem;
	grid-template-rows: 6rem auto 1fr;

	grid-template-areas:
		"header orders"
		"seats orders"
		"tickets orders"
	;
	gap: 1rem;
}

html body#body div.content {
	max-width: 100% !important;
}

div.controls {
	grid-area: header;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-template-rows: 1fr;
	gap: 1rem;
	.rows strong {
		cursor: pointer;
	}
}

div.orders {
	grid-area: orders;
	display: flex;
	flex-direction: column;
	gap: .2rem;

	h1, h2, h3, p {
		margin-block-start: 0;
		margin-block-end: 0;
	}

	.order-summary {
		text-align: center;
		border-bottom: 1px solid;
		@include theme(border-bottom-color, text);
		padding-bottom: .3rem;
	}

	div.order {

		span.bold {
			font-weight: bold;
		}

		h1, h2, h3, p {
			margin-block-start: 0;
			margin-block-end: 0;
		}

		//padding: 0.25rem;
		border: 2px solid;
		border-radius: .5rem;
		@include theme(border-color, accent1);
		&.seated {
			@include theme(border-color, accent2);

			.num {
				@include theme-adjust(background-color, accent2, rgba, .4);
			}
		}

		display: grid;
		grid-template-columns: 3em 1fr;
		&.has_note {
			grid-template-rows: repeat(3, auto);
			grid-template-areas:
				"num name"
				"num seats"
				"num note"
			;
			.seats {
				padding-bottom: 0;
			}
		}
		&:not(.has_note) {
			grid-template-rows: repeat(2, auto);
			grid-template-areas:
				"num name"
				"num seats"
			;
			.note {
				display: none;
			}
		}
		gap: .25rem .5rem;

		.num {
			grid-area: num;
			align-self: stretch;
			justify-self: stretch;
			text-align: center;

			display: flex;
			align-items: center;
			justify-content: center;

			cursor: grab;

			span {
				align-self: center;
				justify-items: center;
			}

			@include theme-adjust(background-color, accent1, rgba, .4);
		}
		.name {
			grid-area: name;
			padding-top: .2rem;
		}
		.seats {
			grid-area: seats;
			padding-bottom: .3rem;
			height: 1.2rem;
		}
		.note {
			grid-area: note;
			padding-bottom: .3rem;
			overflow: hidden;
			white-space: nowrap;
			text-overflow: ellipsis;
			height: 1.2rem;
		}
	}
}



div.seats-container {
	display: flex;
	flex-direction: column;
	align-items: stretch;
	justify-content: center;
	gap: .5rem;
	grid-area: seats;
}

div.row {
	display: grid;
	//flex-direction: row;
	//align-items: center;
	//justify-content: space-evenly;
	grid-template-columns: repeat(12, 1fr);
	grid-template-rows: 1fr;
	//gap: .5rem;
}

div.seat {
	margin: 0 .25rem;
	text-align: center;
	width: 5rem;
	height: 5rem;
	display: grid;
	grid-template-columns: 1px calc(4rem - 1px) calc(1rem - 1px) 1px;
	grid-template-rows: 1fr 1.2rem;
	grid-template-areas:
		"name name name name"
		"seat seat x x"
	;

	&.join-left {
		margin-left: -1px;
		padding-left: calc(.25rem + 2px);
		border-left: 0 !important;
		border-bottom-left-radius: 0 !important;
		&.assigned .seatNum {
			border-bottom-left-radius: 0 !important;
			@include theme-adjust(box-shadow, bg2, rgba, 1%, calc(-.5rem + -3px) 0);
		}
	}

	&.join-right {
		margin-right: -1px;
		padding-right: calc(.25rem + 2px);
		border-right: 0 !important;
		border-bottom-right-radius: 0 !important;

		&.assigned .seatNum {
			border-bottom-right-radius: 0 !important;
		}
		&.assigned:not(:has(+ .aisle)) .bg {
			width: calc(.5rem + 2px);
			grid-area: 2 / 3 / 3 / 4;
			@include theme-adjust(background-color, bg2, rgba, 1%);
		}
	}

	.join-right + &.aisle, &.aisle:has(+ .join-left) {
		border-width: 1px 0;
		border-style: dashed;
		@include theme(border-color, text);
		margin: 0;
		padding: 0 .25rem;
	}

	&.aisle {
		//grid-column: span 2;
	}

	.resize {
		&[draggable="true"] {
			cursor: ew-resize;
			opacity: 0;
		}

		&.left {
			grid-area: 1 / 1 / 2 / 2;
		}
		&.right {
			grid-row-start: 1;
			grid-column-start: 4;
			grid-row-end: 2;
			grid-column-end: 5;
		}
	}

	&:not(.nonexistent) {
		border: 1px solid;
		@include theme(border-color, text);
		border-bottom-left-radius: .7rem;
		border-bottom-right-radius: .7rem;
	}

	.name {
		grid-area: name;
		align-self: flex-end;
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: flex-end;
	}

	.seatNum {
		grid-area: 2 / 1 / 3 / -1;
	}

	&.assigned .seatNum {
		border-bottom-left-radius: .7rem;
		border-bottom-right-radius: .7rem;
		@include theme-adjust(background-color, bg2, rgba, 1%);
		cursor: grab;
	}

	&.assigned .remove {
		align-self: flex-end;
		justify-self: center;
		padding-right: .3rem;
		font-size: 1.5rem;
		margin: -.2rem 0;

		cursor: pointer;

		grid-area: x;
	}

	&:not(.assigned) .remove {
		display: none;
	}
}

div.loader {
	/* HTML: <div class="loader"></div> */
/* HTML: <div class="loader"></div> */
	& {
		//height: 30px;
		width: 70%;
		margin-bottom: .8rem;
		aspect-ratio: 2.5;
		@include theme(--_c, text);
		--_g: no-repeat radial-gradient(farthest-side,var(--_c) 90%,#0000);
		//--_g: no-repeat radial-gradient(farthest-side,#000 90%,#0000);
		background:var(--_g), var(--_g), var(--_g), var(--_g);
		background-size: 20% 50%;
		animation: l43 1s infinite linear;
	}
	@keyframes l43 {
		0%     {background-position: calc(0*100%/3) 50% ,calc(1*100%/3) 50% ,calc(2*100%/3) 50% ,calc(3*100%/3) 50% }
		16.67% {background-position: calc(0*100%/3) 0   ,calc(1*100%/3) 50% ,calc(2*100%/3) 50% ,calc(3*100%/3) 50% }
		33.33% {background-position: calc(0*100%/3) 100%,calc(1*100%/3) 0   ,calc(2*100%/3) 50% ,calc(3*100%/3) 50% }
		50%    {background-position: calc(0*100%/3) 50% ,calc(1*100%/3) 100%,calc(2*100%/3) 0   ,calc(3*100%/3) 50% }
		66.67% {background-position: calc(0*100%/3) 50% ,calc(1*100%/3) 50% ,calc(2*100%/3) 100%,calc(3*100%/3) 0   }
		83.33% {background-position: calc(0*100%/3) 50% ,calc(1*100%/3) 50% ,calc(2*100%/3) 50% ,calc(3*100%/3) 100%}
		100%   {background-position: calc(0*100%/3) 50% ,calc(1*100%/3) 50% ,calc(2*100%/3) 50% ,calc(3*100%/3) 50% }
	}
}


div.tickets {
	grid-area: tickets;

	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: auto;
	gap: 1rem;
	padding: 1rem calc(sqrt(2)*1rem);

	h1, h2, h3 {
		margin-block-start: 0;
		margin-block-end: 0;
	}

	div.ticket {
		aspect-ratio: sqrt(2);
		border: 2px solid;
		@include theme(border-color, text);
		padding: 1rem calc(sqrt(2)*1rem);

		display: grid;
		grid-template-columns: 1fr 3fr;
		grid-template-areas:
			"logo group"
			"logo show"
			"logo authors"
			"date date"
			"name name"
			"seats seats"
		;

		div {
			display: flex;
			align-items: center;
			justify-content: center;
		}

		div.name, div.seats {
			justify-content: flex-start;
		}

		.logo {
			grid-area: logo;
			svg {
				width: 100%;
				//height: 100%;
				@include theme(stroke, text);
				@include theme(fill, text);
			}
		}

		.group-presents {
			grid-area: group;
			text-align: center;
			font-style: italic;
		}

		.show {
			grid-area: show;
			text-align: center;
		}

		.authors {
			grid-area: authors;
			text-align: center;
		}

		.date {
			grid-area: date;
			text-align: center;
		}

		.name {
			grid-area: name;
			text-align: left;
		}

		.seats {
			grid-area: seats;
			text-align: left;
		}

		span.bold {
			font-weight: bold;
			padding-left: .3rem;
		}
	}
}

div.tickets div.ticket:nth-child(9n-8) {
	//border-color: red !important;
}

@media print {
	body {
		height: unset;
		min-height: unset;
		max-height: unset;
		overflow-x: unset;
		overflow-y: unset;
	}

	div.seating-planner {
		grid-template-columns: 1fr 0;
	}

	div.main-outer {
		background-color: white;
	}

	div.tickets {
		gap: 1rem calc(sqrt(2)*1rem);
	}

	div.ticket:nth-child(9n-8),div.ticket:nth-child(9n-7),div.ticket:nth-child(9n-6),  {
		margin-top: 1.25rem;
		page-break-before: always;
	}

	div.footer, div.portal-nav, div.title-bar, div.orders {
		display: none !important;
	}

	div.main-section {
		padding: 0 !important;
		background-color: white;
	}

	div.content {
		width: 100%;
		margin: 0;
	}

	::-webkit-scrollbar {
		display: none;
		scrollbar-width: none;
		-ms-overflow-style: none;
	}

	@page {
		margin: 0;
		size: landscape;
		//page-orientation: rotate-right;
	}
}

